[Update] Fix Code Smell.